# nothinggg

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
agentic-mcp/: agents.py  app.py  mcp_client.py  requirements.txt  utils.py
ai-chatbot/: package-lock.json  package.json  pnpm-lock.yaml
ai-chatbot/app/(auth)/register/: page.tsx
ai-chatbot/app/api/chat/: route.ts
ai-chatbot/components/: chat-header.tsx  chat.tsx  overview.tsx
ai-chatbot/lib/ai/: providers.ts
git_something/: README.md  package-lock.json  package.json  tsconfig.json
git_something/public/: index.html
git_something/src/: index.ts  integrator.ts  server.ts
landing/: package-lock.json  package.json  tailwind.config.ts
landing/app/: layout.tsx  page.tsx
landing/components/: applications.tsx  cta.tsx  features.tsx  footer.tsx  header.tsx  hero.tsx  how-it-works.tsx  mouse-gradient.tsx  navbar.tsx  pricing.tsx  testimonials.tsx  theme-toggle.tsx
rust-backend/: Cargo.toml
rust-backend/src/: main.rs
visualizer/: package-lock.json  package.json
visualizer/app/: dump.json  globals.css  page.tsx
visualizer/app/api/repo-data/: route.ts
visualizer/app/components/: RepoVisualizer.tsx  github-repo-visualization.tsx
visualizer/app/public/: train.glb
visualizer/app/types/: github.ts  repo-data.ts
visualizer/prisma/: schema.prisma
visualizer/prisma/migrations/20250310060733_db_change_op/: migration.sql
